Longest Substring Without Repeating Characters  Add to List.html

--- a/leetcode/Longest Substring Without Repeating Characters  Add to List.html
+++ b/leetcode/Longest Substring Without Repeating Characters  Add to List.html
@@ -65,8 +65,8 @@
         }
         console.log(maxLen);
         return Math.max(maxLen, r - l);
-    };
-    lengthOfLongestSubstring("pwwkew");
+    }
+    lengthOfLongestSubstring("pwwkewghjhjk");
 </script>
 </body>
 </html>
