用JS禁用DOM标签.html

--- a/测试/用JS禁用DOM标签.html
+++ b/测试/用JS禁用DOM标签.html
@@ -19,7 +19,8 @@
 <script>
 
 
-    document.getElementById("btn").disabled=true;    //这个是原生的js禁用标签的方式
+//    document.getElementById("btn").disabled=true;    //这个是原生的js禁用标签的方式
+    document.getElementById("btn").setAttribute("disabled",true);     //这个是原生的js禁用标签的方式
 
 </script>
 
